# adam

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  ci_env.yml  ci_env_win.yml  iCubGazeboV2_5.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  conda-forge-ci.yml  conda-forge-tests.yml  pypi-ci.yml  read_the_docs.yml  tests.yml
adam/: __init__.py
adam/Computations/: KinDynComputations.py  __init__.py
adam/Geometry/: __init__.py
adam/casadi/: casadi_like.py  computations.py  spatial_math_casadi.py
adam/core/: __init__.py  computations.py  link_parametric.py  rbd_algorithms.py  spatial_math.py  transforms.py  urdf_tree.py
adam/geometry/: utils.py
adam/jax/: computations.py  jax_like.py  spatial_math_jax.py
adam/numpy/: __init__.py  computations.py  numpy_like.py  spatial_math_numpy.py
adam/pytorch/: computations.py  spatial_math_pytorch.py  torch_like.py
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/modules/: adam.core.rst  adam.geometry.rst  adam.model.std_factories.rst  adam.parametric.casadi.rst  adam.parametric.jax.rst  adam.parametric.model.parametric_factories.rst  adam.parametric.model.rst  adam.parametric.numpy.rst  adam.parametric.pytorch.rst  casadi.rst  index.rst  jax.rst  model.conversions.rst  model.rst  pytorch.rst  pytorch_batched.rst
docs/quickstart/: casadi.rst  jax.rst  pytorch.rst  pytorch_batched.rst
docs/source/: conf.py  index.rst  installation.rst
docs/source/modules/: adam.parametric.rst  index.rst  numpy.rst  pytorch_batched.rst
docs/source/quickstart/: index.rst  pytorch_batched.rst
examples/: iCub_example.ipynb  iCub_example_casadi.ipynb  iCub_example_casadi_hardware_parameters.ipynb  iCub_example_casadi_w_hardware_stickbot.ipynb  ik.ipynb  mpc-ik.ipynb
src/adam/: __init__.py
src/adam/casadi/: __init__.py  casadi_like.py  computations.py  computations_parametric.py  inverse_kinematics.py
src/adam/core/: __init__.py  array_api_math.py  constants.py  geometry.py  geometry_parametric.py  joint.py  joint_parametric.py  link_parametric.py  model.py  rbd_algorithms.py  spatial_math.py  tree.py  urdf_tree.py
src/adam/core/factories/: std_joint.py  std_link.py  std_model.py
src/adam/geometry/: __init__.py
src/adam/jax/: __init__.py  computations.py  computations_parametric.py  jax_like.py
src/adam/model/: __init__.py  abc_factories.py  factory.py  kindyn_mixin.py  model.py  tree.py  utils.py
src/adam/model/conversions/: __init__.py  idyntree.py
src/adam/model/factories/: abc_factories.py  std_joint.py  std_link.py
src/adam/model/mj_factories/: mj_joint.py  mj_link.py  mj_model.py
src/adam/model/mj_factory/: mujoco_model.py
src/adam/model/parametric_factories/: parametric_joint.py  parametric_link.py  parametric_model.py
src/adam/model/std_factories/: mujoco_model.py  std_joint.py  std_link.py  std_model.py
src/adam/numpy/: __init__.py  computations.py  computations_parametric.py  numpy_like.py
src/adam/parametric/: __init__.py  computations.py
src/adam/parametric/casadi/: __init__.py  computations_parametric.py
src/adam/parametric/jax/: __init__.py  computations_parametric.py
src/adam/parametric/model/: __init__.py
src/adam/parametric/model/parametric_factories/: __init__.py  parametric_joint.py  parametric_link.py  parametric_model.py
src/adam/parametric/numpy/: computations_parametric.py
src/adam/parametric/pytorch/: __init__.py  computations_parametric.py
src/adam/pytorch/: __init__.py  computation_batch.py  computations.py  computations_parametric.py  torch_like.py
tests/: CasADi_computations_body.py  NumPy_computations_body.py  conftest.py  test_CasADI_computations_with_hardware_param.py  test_CasADi_computations.py  test_CasADi_computations_parametric.py  test_Jax_computations.py  test_Jax_computations_parametric.py  test_NumPy_computations.py  test_NumPy_computations_parametric.py  test_casadi.py  test_computations.py  test_idyntree_conversion.py  test_jax.py  test_jax_batch.py  test_mujoco.py  test_mujoco_kindyn.py  test_numpy.py  test_pytorch.py  test_pytorch_autograd.py  test_pytorch_batch.py  test_pytorch_computations.py  test_pytorch_computations_parametric.py  test_wHardware_CasADi_computations.py
tests/body_fixed/: test_CasADi_body_fixed.py  test_Jax_body_fixed.py  test_NumPy_body_fixed.py  test_pytorch_body_fixed.py
tests/conversions/: test_idyntree.py  test_idyntree_parametric.py
tests/from_mujoco/: test_CasADi_mj.py  test_Jax_mj.py  test_NumPy_mixed.py  test_NumPy_mj.py  test_pytorch_mixed.py  test_pytorch_mj.py
tests/mixed/: test_CasADi_mixed.py  test_Jax_mixed.py  test_NumPy_mixed.py  test_pytorch_mixed.py
tests/parametric/: test_CasADi_computations_parametric.py  test_Jax_computations_parametric.py  test_NumPy_computations_parametric.py  test_casadi_parametric.py  test_idyntree_conversion.py  test_idyntree_conversion_parametric.py  test_jax.py  test_jax_parametric.py  test_numpy.py  test_numpy_parametric.py  test_pytorch.py  test_pytorch_computations_parametric.py  test_pytorch_parametric.py
tests/pytorch_batch/: test_pytorch_batch.py  test_pytorch_batch_bak.py
urdf/iCubGenova04/: model.urdf
