[build-system]
build-backend = "setuptools.build_meta"
requires = ["wheel", "setuptools>=45", "setuptools_scm[toml]>=6.0"]

[project]
name = "adam-robotics"
dynamic = ["version"]
description = "Automatic Differentiation for rigid-body-dynamics AlgorithMs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Giuseppe L'Erario", email = "gl.giuseppelerario@gmail.com" },
]
requires-python = ">=3.10"
keywords = [
  "robotics",
  "urdf",
  "rigid body dynamics",
  "featherstone",
  "automatic differentiation",
  "optimization",
  "casadi",
  "jax",
  "pytorch",
  "reinforcement-learning",
  "motion-planning",
]
dependencies = [
  "numpy>=1.20",
  "scipy",
  "casadi>=3.6",
  "prettytable",
  "urdf_parser_py",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
casadi = ["casadi"]
pytorch = ["torch", "jax", "jaxlib", "jax2torch"]
test = [
  "jax",
  "jaxlib",
  "casadi",
  "torch",
  "pytest",
  "idyntree",
  "icub-models",
  "black",
  "jax2torch",
  "requests",
]
conversion = ["idyntree"]
all = ["jax", "jaxlib", "casadi>=3.6", "torch", "jax2torch"]

[project.urls]
"Documentation" = "https://adam-robotics.readthedocs.io/en/latest/"
"Source" = "https://github.com/ami-iit/adam"

[tool.setuptools]
package-dir = {"" = "src"}                      # keeps the src/ layout

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["src"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose"
testpaths = ["tests"]
