[metadata]
name = ADAM
description = Automatic Differentiation for rigid body AlgorithMs
author = "Giuseppe L'Erario"
author_email = gl.giuseppelerario@gmail.com
license_file = LICENSE
url = https://github.com/ami-iit/ADAM
version = 0.0.1

keywords =
    robotics
    urdf
    rigid body dynamics
    featherstone
    automatic-differentiation
    optimization
    casadi
    jax
    pytorch
    reinforcement-learning
    motion-planning

[options]
packages = find:
python_requires = >=3.8
install_requires =
        jax
        jaxlib
        numpy >=1.20
        scipy
        casadi
        matplotlib
        prettytable
        urdf_parser_py
        torch
        urdfpy

[options.extras_require]
test =
        pytest
        idyntree
        gym-ignition-models
        black

[tool:pytest]
addopts = --capture=no --verbose
