[metadata]
name = adam-robotics
description = Automatic Differentiation for rigid-body-dynamics AlgorithMs
long_description = file: README.md
long_description_content_type = text/markdown
author = Giuseppe L'Erario
author_email = gl.giuseppelerario@gmail.com
license_files = LICENSE
url = https://github.com/ami-iit/ADAM

keywords =
    robotics
    urdf
    rigid body dynamics
    featherstone
    automatic-differentiation
    optimization
    casadi
    jax
    pytorch
    reinforcement-learning
    motion-planning

[options]
packages = find:
package_dir =
        = src
python_requires = >=3.7
install_requires =
        numpy >=1.20
        scipy
        casadi
        prettytable
        urdf_parser_py

[options.packages.find]
where = src

[options.extras_require]
jax =
        jax
        jaxlib
casadi =
        casadi
pytorch =
        torch
test =
        jax
        jaxlib
        casadi
        torch
        pytest
        idyntree
        icub-models
        black
all =
        jax
        jaxlib
        casadi
        torch

[tool:pytest]
addopts = --capture=no --verbose
